update bool from topic to handle the course

--- a/config/waypoints.yaml
+++ b/config/waypoints.yaml
@@ -1,5 +1,3 @@
-length: 4
-
 waypoints:
   - point:
       x: 0
@@ -17,4 +15,11 @@ waypoints:
       x: 10.314414441521409
       y: 0.051021550029830345
       th: 0 # in degree   
-
+  - point:
+      x: 7.314414441521409
+      y: 0.051021550029830345
+      th: 0 # in degree 
+  - point:
+      x: 3.959780200194285
+      y: 0.051021550029830345
+      th: 0 # in degree
